# pathview

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  imgui.ini  run_mcp_tests.sh  test_mcp_client.py  vcpkg.json
.claude/: settings.local.json
.github/workflows/: CICD.yml  test.yml
cmake/: FindNFD.cmake  FindOpenSlide.cmake  FindSDL2_image.cmake
docs/: AI_AGENT_GUIDE.md
pathanalyze/mcp/: tools.py
protobuf/: cell_polygons.pb.cc  cell_polygons.pb.h  cell_polygons.proto
resources/fonts/: IconsFontAwesome6.h
server/pathanalyze/: README.md  pyproject.toml
server/pathanalyze/pathanalyze/: graph.py  main.py
server/pathanalyze/pathanalyze/mcp/: tools.py
server/pathanalyze/tests/: test_step4_action_card_streaming.py  test_step7_errors.py
src/: Application.cpp  Application.h  PolygonOverlay.h
src/api/: CMakeLists.txt
src/api/http/: HTTPServer.cpp  HTTPServer.h  SnapshotManager.cpp  SnapshotManager.h
src/api/ipc/: IPCClient.cpp  IPCClient.h  IPCMessage.cpp  IPCMessage.h  IPCServer.cpp  IPCServer.h
src/api/mcp/: MCPServer.cpp  MCPServer.h  MCPTools.cpp  MCPTools.h  main.cpp
src/core/: ActionCard.cpp  ActionCard.h  Animation.cpp  Animation.h  AnimationToken.h  AnnotationManager.cpp  AnnotationManager.h  Application.cpp  Application.h  JSONPolygonLoader.cpp  NavigationLock.cpp  NavigationLock.h  PNGEncoder.cpp  PNGEncoder.h  PolygonLoader.cpp  PolygonLoader.h  PolygonLoaderFactory.h  PolygonOverlay.cpp  PolygonOverlay.h  ProtobufPolygonLoader.cpp  ScreenshotBuffer.cpp  ScreenshotBuffer.h  SlideRenderer.cpp  SlideRenderer.h  TextureManager.h  TileCache.cpp  TileCache.h  TileLoadRequest.h  TileLoadThreadPool.cpp  TileLoadThreadPool.h  UIStyle.cpp  UIStyle.h  Viewport.cpp  Viewport.h
src/loaders/: JSONPolygonLoader.cpp  JSONPolygonLoader.h  PolygonLoaderFactory.h  ProtobufPolygonLoader.cpp  ProtobufPolygonLoader.h
test/: CMakeLists.txt  README.md
test/unit/: action_card_test.cpp  png_encoder_test.cpp  snapshot_manager_test.cpp
tests/: test_action_cards.py  test_step7_errors.py  test_step7_happy_path.py  test_step7_lock_enforcement.py
