[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pathanalyze"
version = "0.1.0"
description = "LangGraph-based pathology analysis agent"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "PathView Team"}
]

dependencies = [
    "langchain>=0.3.0",
    "langgraph>=0.2.0",
    "httpx>=0.27.0",
    "httpx-sse>=0.4.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.0",
    "httpx-mock>=0.1.0",
    "aiohttp>=3.9.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "aioresponses>=0.7.6",
]

[project.scripts]
pathanalyze = "pathanalyze.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
timeout = 30
addopts = "-m 'not integration'"
markers = [
    "unit: Unit tests (no external dependencies)",
    "integration: Integration tests (requires live MCP server)",
    "slow: Slow tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
